updated alert page